First commit of project, containing project structure, and base code to keep HAMMERINGgit add .!

--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "@nestjs/microservices": "^4.4.0",
     "@nestjs/testing": "^4.4.0",
     "@nestjs/websockets": "^4.4.0",
+    "@types/axios": "^0.14.0",
+    "@types/joi": "^13.0.1",
+    "@types/jsonwebtoken": "^7.2.3",
+    "@types/mongoose": "^4.7.28",
+    "axios": "^0.17.1",
+    "bcrypt": "^1.0.3",
+    "joi": "^13.0.2",
+    "jsonwebtoken": "^8.1.0",
+    "moment": "^2.19.3",
+    "mongoose": "^4.13.5",
     "redis": "^2.7.1",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
